--- a/templates/edit.html
+++ b/templates/edit.html
@@ -71,7 +71,7 @@
       </div>
       <div id="password" class="inline">
         <label for="password" class='password'>password確認</label>
-        <input type="password" name="passwd" value="">
+        <input type="password" name="passwd_again" value="">
       </div>
       <div id="name" class="inline">
         <label for="password" class='name'>お名前</label>
