--- a/templates/info.html
+++ b/templates/info.html
@@ -31,5 +31,14 @@
     <img src="static/img/thankyou.png" alt="">
   </div>
 
+  <footer>
+    <div class='text'>
+      <img src="static/img/test.png" alt="＠Tukutter株式会社" class="test" >
+      <img src="static/img/footer.png" alt="" class="world" >
+      <h2>Tukutter@つぶやきで世界は繋がる</h2>
+    </div>
+    <p class='company'>＠株式会社Tukutter</p>
+  </footer>
+
 </body>
 </html>
