--- a/templates/new.html
+++ b/templates/new.html
@@ -36,9 +36,18 @@
         <hr>
     </form>
     <p class="back">
-      <a href="/login"><input type="submit" value=" Login画面" /></a>
+      <a href="/"><input type="submit" value=" Login画面" /></a>
     </p>
 </div>
+
+<footer>
+  <div class='info'>
+    <img src="static/img/test.png" alt="＠Tukutter株式会社" class="test" >
+    <img src="static/img/footer.png" alt="" class="world" >
+    <h2>Tukutter@つぶやきで世界は繋がる</h2>
+  </div>
+  <p class='company'>＠株式会社Tukutter</p>
+</footer>
 
 </body>
 </html>
