--- a/templates/pro.html
+++ b/templates/pro.html
@@ -27,14 +27,14 @@
     {% for pro in pros %}
     <div class="profile">
       <a href="/pro"><img src="{{pro[2]}}" alt="プロフィール"></a>
-      <a href="/" class='tukutter'><img src="static/img/test.png" alt="" style="margin-top: 20px;"></a>
+      <a href="/tukutter" class='tukutter'><img src="static/img/test.png" alt="" style="margin-top: 20px;"></a>
       <p>{{pro[0]}}</p>
 
     </div>
     <div class="nav">
 
       <ul class="nl clearFix">
-        <li><a href="/">TOP</a></li>
+        <li><a href="/tukutter">TOP</a></li>
         <li><a href="/search">検索</a></li>
         <li><a href="/tweet">つぶやく</a></li>
         <li><a href="/oki">お気に入り</a></li>
