--- a/templates/yuryou.html
+++ b/templates/yuryou.html
@@ -42,5 +42,14 @@
     </div>
   </div>
 
+  <footer>
+    <div class='info'>
+      <img src="static/img/test.png" alt="＠Tukutter株式会社" class="test" >
+      <img src="static/img/footer.png" alt="" class="world" >
+      <h2>Tukutter@つぶやきで世界は繋がる</h2>
+    </div>
+    <p class='company'>＠株式会社Tukutter</p>
+  </footer>
+
 </body>
 </html>
