--- a/static/css/edit_pad.css
+++ b/static/css/edit_pad.css
@@ -315,3 +315,46 @@ div.nav ul.nl li a:hover {
 .error p {
   margin: 10px auto;
 }
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  background-color: #EEEEEE;
+  opacity: 0.8;
+}
+
+.info img.world {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 120px;
+}
+
+.info img {
+  width: 200px;
+  margin: 25px 25px 0 25px;
+}
+
+.info h2 {
+  text-align: right;
+  margin-right: 10px;
+  font-size: 13px;
+  float: right;
+  margin-top: 40px;
+}
+
+footer p {
+  text-align: left;
+  margin-right: 0;
+  margin-left: 70px;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 15px;
+  padding: 0;
+  width: 150px;
+}
