--- a/static/css/pay.css
+++ b/static/css/pay.css
@@ -211,3 +211,35 @@ input .submit {
   margin: 0 auto;
   text-shadow: 2px 2px 2px black;
 }
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  background-color: #EEEEEE;
+  opacity: 0.8;
+}
+
+.info img.world {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 120px;
+}
+
+.info img {
+  width: 200px;
+  margin: 25px 25px 0 25px;
+}
+
+.info h2 {
+  text-align: right;
+  margin-right: 10px;
+  font-size: 13px;
+  float: right;
+  margin-top: 40px;
+}
