--- a/templates/follower.html
+++ b/templates/follower.html
@@ -27,7 +27,7 @@
     {% for test in tests%}
     <div class="profile">
       <a href="/pro"><img src="{{test[1]}}" alt="プロフィール"></a>
-      <a href="/" class='tukutter'><img src="static/img/test.png" alt="" style="margin-top: 20px;"></a>
+      <a href="/tukutter" class='tukutter'><img src="static/img/test.png" alt="" style="margin-top: 20px;"></a>
       <p>{{test[0]}}</p>
 
       <div class="back">
@@ -39,7 +39,7 @@
     <div class="nav">
 
       <ul class="nl clearFix">
-        <li><a href="/">TOP</a></li>
+        <li><a href="/tukutter">TOP</a></li>
         <li><a href="/search">検索</a></li>
         <li><a href="/tweet">つぶやく</a></li>
         <li><a href="/oki">お気に入り</a></li>
@@ -69,6 +69,15 @@
       <a href="/follower/delete/{{pro[3]}}" class="square_btn">フォロー外す</a>
     </div>
     {% endfor %}
+
+    <footer>
+      <div class='info'>
+        <img src="static/img/test.png" alt="＠Tukutter株式会社" class="test" >
+        <img src="static/img/footer.png" alt="" class="world" >
+        <h2>Tukutter@つぶやきで世界は繋がる</h2>
+      </div>
+      <p class='company'>＠株式会社Tukutter</p>
+    </footer>
 
 </body>
 </html>
