--- a/templates/top.html
+++ b/templates/top.html
@@ -26,14 +26,14 @@
   <header>
     <div class="profile">
       <a href="/pro"><img src="{{top[1]}}" alt="プロフィール"></a>
-      <a href="/" class='tukutter'><img src="static/img/test.png" alt="" style="margin-top: 20px;"></a>
+      <a href="/tukutter" class='tukutter'><img src="static/img/test.png" alt="" style="margin-top: 20px;"></a>
       <p>{{top[0]}}</p>
     </div>
   {% endfor %}
     <div class="nav">
 
       <ul class="nl clearFix">
-        <li><a href="/">TOP</a></li>
+        <li><a href="/tukutter">TOP</a></li>
         <li><a href="/search">検索</a></li>
         <li><a href="/tweet">つぶやく</a></li>
         <li><a href="/oki">お気に入り</a></li>
