--- a/templates/tweet.html
+++ b/templates/tweet.html
@@ -22,14 +22,14 @@
     {% for tweet in tweets %}
     <div class="profile">
       <a href="/pro"><img src="{{tweet[0]}}" alt="プロフィール"></a>
-      <a href="/" class='tukutter'><img src="static/img/test.png" alt="" style="margin-top: 20px;"></a>
+      <a href="/tukutter" class='tukutter'><img src="static/img/test.png" alt="" style="margin-top: 20px;"></a>
       <p>{{tweet[1]}}</p>
     </div>
     {% endfor %}
     <div class="nav">
 
       <ul class="nl clearFix">
-        <li><a href="/">TOP</a></li>
+        <li><a href="/tukutter">TOP</a></li>
         <li><a href="/search">検索</a></li>
         <li><a href="/tweet">つぶやく</a></li>
         <li><a href="/oki">お気に入り</a></li>
@@ -54,6 +54,15 @@
     </div>
 
   </div>
+
+  <footer>
+    <div class='info'>
+      <img src="static/img/test.png" alt="＠Tukutter株式会社" class="test" >
+      <img src="static/img/footer.png" alt="" class="world" >
+      <h2>Tukutter@つぶやきで世界は繋がる</h2>
+    </div>
+    <p class='company'>＠株式会社Tukutter</p>
+  </footer>
 
 </body>
 
