--- a/singlepage_template_sample/templates/singlepage_template_sample.html
+++ b/singlepage_template_sample/templates/singlepage_template_sample.html
@@ -38,7 +38,7 @@
            </form>
          </div>
        </div>
-       <div class='window'>
+       <!-- <div class='window'>
          <div class='box'>
            <p class='scrollTopa'></p>
            <p class='scrollTopb'></p>
@@ -50,7 +50,7 @@
            <p class='scrollToph'></p>
            <p class='scrollTopj'></p>
          </div>
-       </div>
+       </div> -->
       <div id='single' class='single'>
         <div id='single_main'>
           <div class='top_bar'>
@@ -385,7 +385,7 @@
                      <div class='sliders'>
                        <ul class='slide next_in'>
                          <div class='row'>
-                           <div class='video_items'>
+                           <div class='video_items main'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/226063968">
                                  <img class='poster' src="static/img/test.jpg" alt="">
@@ -403,7 +403,7 @@
                                </p>
                              </div>
                            </div>
-                           <div class='video_items'>
+                           <div class='video_items main '>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/191584868">
                                  <img class='poster' src="https://i.vimeocdn.com/video/602737860_640x360.jpg?r=pad" alt="">
@@ -421,7 +421,7 @@
                               </p>
                              </div>
                            </div>
-                           <div class='video_items'>
+                           <div class='video_items main'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/171994659">
                                  <img class='poster' src="https://i.vimeocdn.com/video/577587759_640x360.jpg?r=pad" alt="">
@@ -439,7 +439,7 @@
                                </p>
                              </div>
                            </div>
-                           <div class='video_items'>
+                           <div class='video_items main'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/171754376">
                                  <img class='poster' src="https://i.vimeocdn.com/video/577279824_640x360.jpg?r=pad" alt="">
@@ -459,7 +459,7 @@
                            </div>
                          </div>
                          <div class='row'>
-                           <div class='video_items'>
+                           <div class='video_items main'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/171750766">
                                  <img class="poster" src="https://i.vimeocdn.com/video/577275610_640x360.jpg?r=pad">
@@ -477,7 +477,7 @@
                                </p>
                              </div>
                            </div>
-                           <div class='video_items'>
+                           <div class='video_items main'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/171582819">
                                  <img class="poster" src="https://i.vimeocdn.com/video/577077610_640x360.jpg?r=pad">
@@ -495,7 +495,7 @@
                                </p>
                              </div>
                            </div>
-                           <div class='video_items'>
+                           <div class='video_items main'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/168989342">
                                  <img class="poster" src="https://i.vimeocdn.com/video/573595927_640x360.jpg?r=pad">
@@ -513,7 +513,7 @@
                                </p>
                              </div>
                            </div>
-                           <div class='video_items'>
+                           <div class='video_items main'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/168986868">
                                  <img class="poster" src="https://i.vimeocdn.com/video/573592605_640x360.jpg?r=pad">
@@ -535,7 +535,7 @@
                        </ul>
                        <ul class='slide next_out'>
                          <div class='row'>
-                           <div class='video_items'>
+                           <div class='video_items last'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/168984639">
                                  <img class="poster" src="https://i.vimeocdn.com/video/573589830_640x360.jpg?r=pad">
@@ -553,7 +553,7 @@
                                </p>
                              </div>
                            </div>
-                           <div class='video_items'>
+                           <div class='video_items last'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/168983989">
                                  <img class="poster" src="https://i.vimeocdn.com/video/573588913_640x360.jpg?r=pad">
@@ -571,7 +571,7 @@
                                </p>
                              </div>
                            </div>
-                           <div class='video_items'>
+                           <div class='video_items last'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/168983892">
                                  <img class="poster" src="https://i.vimeocdn.com/video/573588763_640x360.jpg?r=pad">
@@ -589,7 +589,7 @@
                                </p>
                              </div>
                            </div>
-                           <div class='video_items'>
+                           <div class='video_items last'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/168979435">
                                  <img class="poster" src="https://i.vimeocdn.com/video/573583049_640x360.jpg?r=pad">
@@ -609,7 +609,7 @@
                            </div>
                          </div>
                          <div class='row'>
-                           <div class='video_items'>
+                           <div class='video_items last'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/168977944">
                                  <img class="poster" src="https://i.vimeocdn.com/video/573581253_640x360.jpg?r=pad">
@@ -627,7 +627,7 @@
                                </p>
                              </div>
                            </div>
-                           <div class='video_items'>
+                           <div class='video_items last'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/168977795">
                                  <img class="poster" src="https://i.vimeocdn.com/video/573580966_640x360.jpg?r=pad">
@@ -645,7 +645,7 @@
                                </p>
                              </div>
                            </div>
-                           <div class='video_items'>
+                           <div class='video_items last'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/168974429">
                                  <img class="poster" src="https://i.vimeocdn.com/video/573576865_640x360.jpg?r=pad">
@@ -663,7 +663,7 @@
                                </p>
                              </div>
                            </div>
-                           <div class='video_items'>
+                           <div class='video_items last'>
                              <div class='video_item_main'>
                                <a href="https://vimeo.com/groups/cameo/videos/168973507">
                                  <img class="poster" src="https://i.vimeocdn.com/video/573593275_640x360.jpg?r=pad">
@@ -712,9 +712,9 @@
                  <h2 class='white'>GO, On, Make Your Movie</h2>
                  <a class='app_store' href="https://itunes.apple.com/us/app/cameo-video-editor-movie-maker/id988821661?mt=8" data-gtm-click="cameo_download_click|location:bottom"></a>
                  <div class='phone_number invalid'>
-                   <form>
+                   <form action="/" method="POST">
                      <div class='tel-input'>
-                       <input type="text" autocomplete="off" placeholder="(XXX)XXXX-XXXX">
+                       <input id='phone' name="phone" type="text" autocomplete="off" maxlength="13" placeholder="(XXX)XXXX-XXXX">
                          <div class='flag-dropdown'>
                            <div class='selected-flag' title='USA: +1'>
                              <div class='iti-flag us'></div>
@@ -747,7 +747,7 @@
                          </div>
                        </input>
                      </div>
-                     <button type="submit" class="button small submit">Send</button>
+                     <input type="submit" class="button small submit" value="Send"></input>
                    </form>
                    <div class="input_overlay instruction">Text me a link</div>
                  </div>
@@ -757,6 +757,24 @@
                </a>
              </section>
         </div>
+        <footer class='footer'>
+         <section class='footer_section'>
+          <div class='footer_main'>
+            <div class='footer_text'>
+              <div class='footer_test'>
+                <img class='footer_text_test' src="static/img/si-sa.png" alt="">&nbsp;<span class='shi-sa'>SHI-SA</span>
+              </div>
+            </div>
+            <div class='footer_bottom'>
+              <p> ©️ 2018 SHI-SA</p>
+              <p>test sample</p>
+            </div>
+          </div>
+          <div class='footer_last'>
+            <p> ©️ test</p>
+          </div>
+         </section>
+        </footer>
       </div>
     </div>
   </div>
