--- a/singlepage_template_sample/static/css/singlepage_template_sample.css
+++ b/singlepage_template_sample/static/css/singlepage_template_sample.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-div.window {
+/*div.window {
   position: fixed;
   z-index: 80;
   width: 200px;
@@ -9,7 +9,7 @@ div.window {
   color: black;
   top: 80px;
 
-}
+}*/
 
 * {
   outline: 0;
@@ -1976,14 +1976,20 @@ strong a {
 .contents .sliders .slide.next_in {
   visibility: visible;
   z-index: 2;
-  -webkit-animation: next_in .5s forwards;
-  animation: next_in .5s forwards;
+  -webkit-animation: slide .5s forwards;
+  animation: slide .5s forwards;
+
 }
 
 .contents .sliders .slide.next_out {
   visibility: visible;
-  -webkit-animation: next_out .5s forwards;
-  animation: next_out .5s forwards;
+  -webkit-animation: slide .5s forwards;
+  animation: slide .5s forwards;
+  left: 100%;
+}
+
+.contents .sliders .slide.next_out {
+  left: 100%;
 }
 
 .contents .navigation.disabled {
@@ -2025,6 +2031,10 @@ strong a {
   opacity: 1;
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
+}
+
+#creaters .inner .creaters_content .contents .row .video_items .video_item_main a img:hover {
+  transform: scale(1.15, 1.15);
 }
 
 #creaters .inner .creaters_content .contents .row .video_items:nth-of-type(1) {
@@ -2176,6 +2186,11 @@ p:first-child {
   transition: opacity .5s cubic-bezier(.4,.85,.49,.99),box-shadow .25s ease;
 }
 
+#creaters .inner .creaters_content .more_link:hover {
+  transform: scale(1.1, 1.10);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+}
+
 .more_link {
   display: inline-block;
 }
@@ -2248,6 +2263,21 @@ p:first-child {
 
 .icon.icon_twitter {
   background-position: 0 100%;
+}
+
+#creaters .inner .community .social .circle_button:nth-of-type(1):hover {
+  transform: scale(1.15, 1.15);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+#creaters .inner .community .social .circle_button:nth-of-type(2):hover {
+  transform: scale(1.15, 1.15);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+#creaters .inner .community .social .circle_button:nth-of-type(3):hover {
+  transform: scale(1.15, 1.15);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 #creaters .inner .community .social.seen .circle_button:nth-of-type(3) {
@@ -2527,6 +2557,7 @@ p:first-child {
 #download .contents .phone_number.invalid form .submit {
   background-color: #CCC;
   box-shadow: none;
+  cursor: pointer;
 }
 #download .contents .phone_number form .submit {
   position: absolute;
@@ -2585,6 +2616,81 @@ button {
 
 #download .contents .phone_number.active form input[type=text] {
   width: 240px;
+}
+
+footer {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  box-sizing: border-box;
+  clear: both;
+  font-size: .875rem;
+  background: url('../img/picture_intro.jpg') ;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 330px;
+}
+
+.footer_section {
+  box-sizing: border-box;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding: 0;
+  min-height: 330px;
+
+}
+
+section .footer_section {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 25px 30px;
+  background-color: #F2F4F5;
+  border-top: 1px solid #D0D8DB;
+  border-bottom: 1px solid #D0D8DB;
+  box-sizing: border-box;
+  height: 100%;
+}
+
+.footer_main {
+  margin: 0 auto;
+  text-align: center;
+  min-height: 300px;
+}
+
+.footer_text {
+  height: 230px;
+}
+
+img.footer_text_test {
+  width: 130px;
+  height: 100px;
+  margin-bottom: 20px;
+}
+
+div.footer_test {
+  padding-top: 80px;
+  font-size: 50px;
+  color: black;
+}
+
+span.shi-sa {
+  margin-top: 20px;
+}
+
+div.footer_bottom {
+  font-size: 18px;
+  color: white;
+}
+
+div.footer_last {
+  text-align: center;
+  font-size: 16px;
 }
 
 @media (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi){
